Assignment2/assignment2/initial/target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Body'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", 
                     "'EndWhile'", "'For'", "'Function'", "'If'", "'Parameter'", 
                     "'Return'", "'Then'", "'Var'", "'While'", "'True'", 
                     "'False'", "'EndDo'", "'+'", "'+.'", "'-'", "'-.'", 
                     "'*'", "'*.'", "'\\'", "'\\.'", "'%'", "'!'", "'&&'", 
                     "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", "'='", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "':'", "'.'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "BODY", "BREAK", "CONTINUE", "DO", "ELSE", 
                      "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNCTION", "IF", "PARAMETER", "RETURN", "THEN", 
                      "VAR", "WHILE", "TRUE", "FALSE", "ENDDO", "PLUS", 
                      "FLOAT_PLUS", "MINUS", "FLOAT_MINUS", "MUL", "FLOAT_MUL", 
                      "DIV", "FLOAT_DIV", "MOD", "NOT", "AND", "OR", "EQ", 
                      "NOT_EQ", "LESS", "GREATER", "LESS_EQ", "GREATER_EQ", 
                      "FLOAT_NOT_EQ", "FLOAT_LESS", "FLOAT_GREATER", "FLOAT_LESS_EQ", 
                      "FLOAT_GREATER_EQ", "ASSIGN", "LP", "RP", "LB", "RB", 
                      "LSB", "RSB", "COLON", "DOT", "COMMA", "SEMI", "ID", 
                      "COMMENT", "WS", "INT_LIT", "FLOAT_LIT", "STRING_LIT", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_many_declars = 1
    RULE_global_var_declar_lst = 2
    RULE_many_var_decl = 3
    RULE_var_decl = 4
    RULE_var_lst = 5
    RULE_many_var = 6
    RULE_var = 7
    RULE_initial_value = 8
    RULE_composite_var = 9
    RULE_dimension_lst = 10
    RULE_many_dimension = 11
    RULE_dimension = 12
    RULE_func_declar_lst = 13
    RULE_many_func_decl = 14
    RULE_func_decl = 15
    RULE_func_name = 16
    RULE_func_param = 17
    RULE_param_lst = 18
    RULE_many_params = 19
    RULE_param = 20
    RULE_body = 21
    RULE_stmt_lst = 22
    RULE_many_stmts = 23
    RULE_expr = 24
    RULE_operand_1 = 25
    RULE_operand_2 = 26
    RULE_operand_3 = 27
    RULE_operand_4 = 28
    RULE_operand_5 = 29
    RULE_index_expr = 30
    RULE_index_ops = 31
    RULE_func_call = 32
    RULE_operand = 33
    RULE_argument_lst = 34
    RULE_many_arguments = 35
    RULE_argument = 36
    RULE_stmt = 37
    RULE_assign_stmt = 38
    RULE_if_stmt = 39
    RULE_elseif_stmt_lst = 40
    RULE_many_elseif_stmts = 41
    RULE_elseif_stmt = 42
    RULE_else_stmt = 43
    RULE_for_stmt = 44
    RULE_while_stmt = 45
    RULE_do_while_stmt = 46
    RULE_break_stmt = 47
    RULE_continue_stmt = 48
    RULE_call_stmt = 49
    RULE_expr_lst = 50
    RULE_many_exprs = 51
    RULE_return_stmt = 52
    RULE_bool_lit = 53
    RULE_lit = 54
    RULE_array_lit = 55
    RULE_lit_list = 56
    RULE_many_lits = 57

    ruleNames =  [ "program", "many_declars", "global_var_declar_lst", "many_var_decl", 
                   "var_decl", "var_lst", "many_var", "var", "initial_value", 
                   "composite_var", "dimension_lst", "many_dimension", "dimension", 
                   "func_declar_lst", "many_func_decl", "func_decl", "func_name", 
                   "func_param", "param_lst", "many_params", "param", "body", 
                   "stmt_lst", "many_stmts", "expr", "operand_1", "operand_2", 
                   "operand_3", "operand_4", "operand_5", "index_expr", 
                   "index_ops", "func_call", "operand", "argument_lst", 
                   "many_arguments", "argument", "stmt", "assign_stmt", 
                   "if_stmt", "elseif_stmt_lst", "many_elseif_stmts", "elseif_stmt", 
                   "else_stmt", "for_stmt", "while_stmt", "do_while_stmt", 
                   "break_stmt", "continue_stmt", "call_stmt", "expr_lst", 
                   "many_exprs", "return_stmt", "bool_lit", "lit", "array_lit", 
                   "lit_list", "many_lits" ]

    EOF = Token.EOF
    BODY=1
    BREAK=2
    CONTINUE=3
    DO=4
    ELSE=5
    ELSEIF=6
    ENDBODY=7
    ENDIF=8
    ENDFOR=9
    ENDWHILE=10
    FOR=11
    FUNCTION=12
    IF=13
    PARAMETER=14
    RETURN=15
    THEN=16
    VAR=17
    WHILE=18
    TRUE=19
    FALSE=20
    ENDDO=21
    PLUS=22
    FLOAT_PLUS=23
    MINUS=24
    FLOAT_MINUS=25
    MUL=26
    FLOAT_MUL=27
    DIV=28
    FLOAT_DIV=29
    MOD=30
    NOT=31
    AND=32
    OR=33
    EQ=34
    NOT_EQ=35
    LESS=36
    GREATER=37
    LESS_EQ=38
    GREATER_EQ=39
    FLOAT_NOT_EQ=40
    FLOAT_LESS=41
    FLOAT_GREATER=42
    FLOAT_LESS_EQ=43
    FLOAT_GREATER_EQ=44
    ASSIGN=45
    LP=46
    RP=47
    LB=48
    RB=49
    LSB=50
    RSB=51
    COLON=52
    DOT=53
    COMMA=54
    SEMI=55
    ID=56
    COMMENT=57
    WS=58
    INT_LIT=59
    FLOAT_LIT=60
    STRING_LIT=61
    ERROR_CHAR=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64
    UNTERMINATED_COMMENT=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_declars(self):
            return self.getTypedRuleContext(BKITParser.Many_declarsContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.many_declars()
            self.state = 117
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_declarsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_var_declar_lst(self):
            return self.getTypedRuleContext(BKITParser.Global_var_declar_lstContext,0)


        def func_declar_lst(self):
            return self.getTypedRuleContext(BKITParser.Func_declar_lstContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_declars

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_declars" ):
                return visitor.visitMany_declars(self)
            else:
                return visitor.visitChildren(self)




    def many_declars(self):

        localctx = BKITParser.Many_declarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_declars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.global_var_declar_lst()
            self.state = 120
            self.func_declar_lst()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_var_declar_lstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(BKITParser.Var_declContext,0)


        def many_var_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_var_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_global_var_declar_lst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_var_declar_lst" ):
                return visitor.visitGlobal_var_declar_lst(self)
            else:
                return visitor.visitChildren(self)




    def global_var_declar_lst(self):

        localctx = BKITParser.Global_var_declar_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_global_var_declar_lst)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.var_decl()
                self.state = 123
                self.many_var_decl()
                pass
            elif token in [BKITParser.EOF, BKITParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(BKITParser.Var_declContext,0)


        def many_var_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_var_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_var_decl" ):
                return visitor.visitMany_var_decl(self)
            else:
                return visitor.visitChildren(self)




    def many_var_decl(self):

        localctx = BKITParser.Many_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_many_var_decl)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.var_decl()
                self.state = 129
                self.many_var_decl()
                pass
            elif token in [BKITParser.EOF, BKITParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_lst(self):
            return self.getTypedRuleContext(BKITParser.Var_lstContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(BKITParser.VAR)
            self.state = 135
            self.match(BKITParser.COLON)
            self.state = 136
            self.var_lst()
            self.state = 137
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_lstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def many_var(self):
            return self.getTypedRuleContext(BKITParser.Many_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_lst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_lst" ):
                return visitor.visitVar_lst(self)
            else:
                return visitor.visitChildren(self)




    def var_lst(self):

        localctx = BKITParser.Var_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_lst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.var()
            self.state = 140
            self.many_var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def many_var(self):
            return self.getTypedRuleContext(BKITParser.Many_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_var" ):
                return visitor.visitMany_var(self)
            else:
                return visitor.visitChildren(self)




    def many_var(self):

        localctx = BKITParser.Many_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_many_var)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(BKITParser.COMMA)
                self.state = 143
                self.var()
                self.state = 144
                self.many_var()
                pass
            elif token in [BKITParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initial_value(self):
            return self.getTypedRuleContext(BKITParser.Initial_valueContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def composite_var(self):
            return self.getTypedRuleContext(BKITParser.Composite_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = BKITParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 149
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 150
                self.composite_var()
                pass


            self.state = 153
            self.initial_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Initial_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def lit(self):
            return self.getTypedRuleContext(BKITParser.LitContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_initial_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitial_value" ):
                return visitor.visitInitial_value(self)
            else:
                return visitor.visitChildren(self)




    def initial_value(self):

        localctx = BKITParser.Initial_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initial_value)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.ASSIGN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(BKITParser.ASSIGN)
                self.state = 156
                self.lit()
                pass
            elif token in [BKITParser.COMMA, BKITParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Composite_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dimension_lst(self):
            return self.getTypedRuleContext(BKITParser.Dimension_lstContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_composite_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComposite_var" ):
                return visitor.visitComposite_var(self)
            else:
                return visitor.visitChildren(self)




    def composite_var(self):

        localctx = BKITParser.Composite_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_composite_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(BKITParser.ID)
            self.state = 161
            self.dimension_lst()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dimension_lstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def many_dimension(self):
            return self.getTypedRuleContext(BKITParser.Many_dimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_dimension_lst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension_lst" ):
                return visitor.visitDimension_lst(self)
            else:
                return visitor.visitChildren(self)




    def dimension_lst(self):

        localctx = BKITParser.Dimension_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dimension_lst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.dimension()
            self.state = 164
            self.many_dimension()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_dimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def many_dimension(self):
            return self.getTypedRuleContext(BKITParser.Many_dimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_dimension" ):
                return visitor.visitMany_dimension(self)
            else:
                return visitor.visitChildren(self)




    def many_dimension(self):

        localctx = BKITParser.Many_dimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_many_dimension)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.LSB]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.dimension()
                self.state = 167
                self.many_dimension()
                pass
            elif token in [BKITParser.BODY, BKITParser.ASSIGN, BKITParser.COMMA, BKITParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = BKITParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_dimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(BKITParser.LSB)
            self.state = 173
            self.match(BKITParser.INT_LIT)
            self.state = 174
            self.match(BKITParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declar_lstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(BKITParser.Func_declContext,0)


        def many_func_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_func_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declar_lst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declar_lst" ):
                return visitor.visitFunc_declar_lst(self)
            else:
                return visitor.visitChildren(self)




    def func_declar_lst(self):

        localctx = BKITParser.Func_declar_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_func_declar_lst)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.func_decl()
                self.state = 177
                self.many_func_decl()
                pass
            elif token in [BKITParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(BKITParser.Func_declContext,0)


        def many_func_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_func_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_func_decl" ):
                return visitor.visitMany_func_decl(self)
            else:
                return visitor.visitChildren(self)




    def many_func_decl(self):

        localctx = BKITParser.Many_func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_many_func_decl)
        try:
            self.state = 186
            self._errHandler.sync(self)
            token = self._input.LA(1)
